# SecretNetwork-Sandbox

./: .gitignore  .gitmodules  Makefile  Makefile2  POPETS-ARTIFACTS-README.md  README.md  TESTING.md  go.mod  go.sum
.github/workflows/: ci.yaml  codeql-analysis.yml  devnet.yml  go-lint.yml  release.yaml
app/: app.go
app/keepers/: keepers.go
deployment/dockerfiles/: Dockerfile  artifacts.Dockerfile  dev.Dockerfile  enclave-test.Dockerfile  test.yml  untrusted-artifacts.Dockerfile
go-cosmwasm/: Cargo.toml  Makefile
go-cosmwasm/api/: callbacks.go
go-cosmwasm/src/: api.rs  db.rs  lib.rs  memory.rs  querier.rs
hacking/: .gitignore  Dockerfile  Makefile  README.md  Readme.md  build_image.sh  compose.yml  dev.Dockerfile  dev.yml  docker-compose.yml  logs.sh  package-lock.json  package.json  rebuild_node.sh  restart_node.sh  rollback.sh  run.sh  run_demo.sh  setup.sh  setup_simple.sh  start_node.sh  test.ts  test_dummy_store.sh  utils.ts
hacking/backup/: victim_key
hacking/backup_snip20/: adv_key  adv_value  contractAddress.txt  kv_store
hacking/contract-sienna-swap/: Cargo.toml
hacking/contract-sienna-swap/src/: contract.rs  msg.rs  state.rs
hacking/contract-simple/: Cargo.toml  Makefile
hacking/contract-toy-swap/: Cargo.toml  Makefile
hacking/teebox/: README.md  pyproject.toml
hacking/teebox/teebox/: __main__.py  main.py
ias_keys/: api_key.txt
scripts/: setup-node-mainnet.sh  setup-node-testnet.sh  sync-state-testnet.sh
scripts-mainnet/: boost.py  boost_params.py  demo_utils.sh  infer_balance.py  params_main.py  server.py  utils.py
(+57 files in other folders)
