[package]
name = "contract-sienna-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0", default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
