[tool.poetry]
name = "teebox"
version = "0.1.0"
description = ""
authors = ["Sylvain Bellemare <sbellem@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
teebox = "teebox.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
